<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="502dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonmusic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Music" />

            <RadioGroup
                android:id="@+id/manAuto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radiomanual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onAutochoose"
                    android:text="@string/Manual" />

                <RadioButton
                    android:id="@+id/radioauto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onAutochoose"
                    android:text="@string/Auto" />
            </RadioGroup>

            <Button
                android:id="@+id/buttonplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Play" />

            <Button
                android:id="@+id/buttonpause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Pause" />

            <Button
                android:id="@+id/buttonmenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Menu" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioGroup
                android:id="@+id/radioGroup3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radiox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/xaxis" />

                <RadioButton
                    android:id="@+id/radioy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/yaxis" />

                <RadioButton
                    android:id="@+id/radioz"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/zaxis" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/min"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editTextmin"
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" >

                    <requestFocus />
                </EditText>

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mili"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <EditText
                    android:id="@+id/editTextmili"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/y_axis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
	            	android:textIsSelectable="true" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/radioGroup4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <RadioButton
                    android:id="@+id/radiobanana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onVidChoose"
                    android:text="@string/Banana" />

                <RadioButton
                    android:id="@+id/radiofireworks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onVidChoose"
                    android:text="@string/Fireworks" />

                <RadioButton
                    android:id="@+id/radiobubbles"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onVidChoose"
                    android:text="@string/Bubbles" />

                <RadioButton
                    android:id="@+id/radioCustomVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onVidChoose"
                    android:text="@string/customVideo" />

                <RadioButton
                    android:id="@+id/radionone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onVidChoose"
                    android:text="@string/None" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customVideoName" />

                <EditText
                    android:id="@+id/videoName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter" />

        </LinearLayout>
        <ViewSwitcher
            android:id="@+id/viewSitcher"
            android:layout_width="fill_parent"
            android:layout_height="500dip"
            android:layout_gravity="center"
            android:paddingTop="10dip"
            android:visibility="visible">
	        <VideoView
		        android:id="@+id/video"
		        android:layout_width="fill_parent"
		        android:layout_height="500dip"
		        android:layout_gravity="center"
		        android:contentDescription="@string/face"
		        android:paddingTop="10dip"
		        android:visibility="visible" />
	        <View
	            android:id="@+id/transparent"
	            android:layout_width="fill_parent"
	            android:layout_height="500dip"
		        android:layout_gravity="center"
		        android:paddingTop="10dip"
		        android:visibility="visible"/>
	      </ViewSwitcher>


    </LinearLayout>

</ScrollView>